welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:3: error: not found: value num
  var max2:Int=num(0)
               ^